--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Pedro Pascal</h1>
+      <h1>Hippopotenuse</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/201" rel="prev">
+        <a href="/comics/202" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/105">
+        <a class="random-post" href="/comics/12">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid showing 2 characters talking. A person says 'Check this out! I created a library for comiCSS that...' and a econd character interrupts him 'Let me stop you right there! A comic? Really? That's a dead medium! Seriously... A comic... and about CSS... No one will read that! You should focus on something more interesting like movies or series... something with Pedro Pascal. Pedro Pascal is everywhere, and it's all good. But CSS? In a comic? Nope!' and adding as he leaves 'I would stop with the CSS nonsense and include something with Pedro Pascal, you'll get views and traction... But it's your call. Bye bye!'. In the last panel, it is revealed that the first person was Pedro Pascal wearing a mask (a caricature of him). Pedro says 'I can't connect with the character. What's his deal? Is he happy? Sad? ...and what is CSS? And the dialog? Terrible! Of course I'm everywhere. I'm Pedro ******* Pascal!'">
-        <img src="/comics/202/202-pedro-pascal-0.webp" alt="" width="350" />
-        <img src="/comics/202/202-pedro-pascal-1.webp" alt="" width="350" />
-        <img src="/comics/202/202-pedro-pascal-2.webp" alt="" width="350" />
-        <img src="/comics/202/202-pedro-pascal-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon of a hippopotamus sleeping on the hypotenuse of a right triangle">
+        <img src="/comics/203/203-hippopotenuse-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/201" rel="prev">
+        <a href="/comics/202" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/107">
+        <a class="random-post" href="/comics/27">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/202">https://comicss.art/comics/202</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/202/pedro-pascal.png">https://comicss.art/comics/202/pedro-pascal.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/202/pedro-pascal.html" rel="alternate">https://comicss.art/comics/202/pedro-pascal.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/203">https://comicss.art/comics/203</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/203/hippopotenuse.png">https://comicss.art/comics/203/hippopotenuse.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/203/hippopotenuse.html" rel="alternate">https://comicss.art/comics/203/hippopotenuse.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-08-17"></script>
+    <script src="/js/data.js?last-updated=2025-08-19"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
