--- a/comics/204/index.html
+++ b/comics/204/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #203: Hippopotenuse</title>
+    <title>comiCSS #204: Too Many Acronyms</title>
 
-    <meta property="og:title" content="comiCSS #203: Hippopotenuse" />
+    <meta property="og:title" content="comiCSS #204: Too Many Acronyms" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/203" />
-    <meta property="og:image" content="https://comicss.art/comics/203/thumb.png" />
-    <meta property="og:description" content="Cartoon of a hippopotamus sleeping on the hypotenuse of a right triangle" />
+    <meta property="og:url" content="https://comicss.art/comics/204" />
+    <meta property="og:image" content="https://comicss.art/comics/204/thumb.png" />
+    <meta property="og:description" content="comic with 4 panels in a 2x2 grid showing two characters chatting while working on their computers. One says 'I'm getting the agenda ready for our CSS brown bag: we'll introduce the rare matchparent in marker-side, and talk about the width in border-bottom, some more about borders (small and medium), word-space: normal, and maybe transform translates if we have time...', the other one replies 'Sounds like a lot... will people get scared with so much CSS?' The first one replies 'Good point! I'll use acronyms to make it shorter and less scary! ...and sent!' The second character looks shocked as he receives a new email 'subject: brown bag. In this meeting: msm, bbw, bd sm, wsn, tts (tbd)' And the first character exclaims excited: 'Wow! So many replies already! Most of the back-end guys... I didn't know they were into this! Oh! And Linda from HR!' as the second character covers his face in desperation." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/203">
-    <meta name="twitter:title" content="comiCSS #203: Hippopotenuse">
-    <meta name="twitter:description" content="Cartoon of a hippopotamus sleeping on the hypotenuse of a right triangle">
-    <meta name="twitter:image" content="https://comicss.art/comics/203/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/204">
+    <meta name="twitter:title" content="comiCSS #204: Too Many Acronyms">
+    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid showing two characters chatting while working on their computers. One says 'I'm getting the agenda ready for our CSS brown bag: we'll introduce the rare matchparent in marker-side, and talk about the width in border-bottom, some more about borders (small and medium), word-space: normal, and maybe transform translates if we have time...', the other one replies 'Sounds like a lot... will people get scared with so much CSS?' The first one replies 'Good point! I'll use acronyms to make it shorter and less scary! ...and sent!' The second character looks shocked as he receives a new email 'subject: brown bag. In this meeting: msm, bbw, bd sm, wsn, tts (tbd)' And the first character exclaims excited: 'Wow! So many replies already! Most of the back-end guys... I didn't know they were into this! Oh! And Linda from HR!' as the second character covers his face in desperation.">
+    <meta name="twitter:image" content="https://comicss.art/comics/204/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/203" />
+    <link rel="canonical" href="https://comicss.art/comics/204" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Hippopotenuse</h1>
+      <h1>Too Many Acronyms</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/202" rel="prev">
+        <a href="/comics/203" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/12">
+        <a class="random-post" href="/comics/137">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/204" rel="next">
+        <a href="/comics/205" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="Cartoon of a hippopotamus sleeping on the hypotenuse of a right triangle">
-        <img src="/comics/203/203-hippopotenuse-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid showing two characters chatting while working on their computers. One says 'I'm getting the agenda ready for our CSS brown bag: we'll introduce the rare matchparent in marker-side, and talk about the width in border-bottom, some more about borders (small and medium), word-space: normal, and maybe transform translates if we have time...', the other one replies 'Sounds like a lot... will people get scared with so much CSS?' The first one replies 'Good point! I'll use acronyms to make it shorter and less scary! ...and sent!' The second character looks shocked as he receives a new email 'subject: brown bag. In this meeting: msm, bbw, bd sm, wsn, tts (tbd)' And the first character exclaims excited: 'Wow! So many replies already! Most of the back-end guys... I didn't know they were into this! Oh! And Linda from HR!' as the second character covers his face in desperation.">
+        <img src="/comics/204/204-tma-0.webp" alt="" width="350" />
+        <img src="/comics/204/204-tma-1.webp" alt="" width="350" />
+        <img src="/comics/204/204-tma-2.webp" alt="" width="350" />
+        <img src="/comics/204/204-tma-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/202" rel="prev">
+        <a href="/comics/203" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/27">
+        <a class="random-post" href="/comics/35">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -164,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/204" rel="next">
+        <a href="/comics/205" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/203">https://comicss.art/comics/203</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/203/hippopotenuse.png">https://comicss.art/comics/203/hippopotenuse.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/203/hippopotenuse.html" rel="alternate">https://comicss.art/comics/203/hippopotenuse.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/204">https://comicss.art/comics/204</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/204/tma.png">https://comicss.art/comics/204/tma.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/204/tma.html" rel="alternate">https://comicss.art/comics/204/tma.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 203;</script>
+    <script>let postId = 204;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
