--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Hippopotenuse</h1>
+      <h1>Too Many Acronyms</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/202" rel="prev">
+        <a href="/comics/203" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/12">
+        <a class="random-post" href="/comics/137">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,8 +140,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon of a hippopotamus sleeping on the hypotenuse of a right triangle">
-        <img src="/comics/203/203-hippopotenuse-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid showing two characters chatting while working on their computers. One says 'I'm getting the agenda ready for our CSS brown bag: we'll introduce the rare matchparent in marker-side, and talk about the width in border-bottom, some more about borders (small and medium), word-space: normal, and maybe transform translates if we have time...', the other one replies 'Sounds like a lot... will people get scared with so much CSS?' The first one replies 'Good point! I'll use acronyms to make it shorter and less scary! ...and sent!' The second character looks shocked as he receives a new email 'subject: brown bag. In this meeting: msm, bbw, bd sm, wsn, tts (tbd)' And the first character exclaims excited: 'Wow! So many replies already! Most of the back-end guys... I didn't know they were into this! Oh! And Linda from HR!' as the second character covers his face in desperation.">
+        <img src="/comics/204/204-tma-0.webp" alt="" width="350" />
+        <img src="/comics/204/204-tma-1.webp" alt="" width="350" />
+        <img src="/comics/204/204-tma-2.webp" alt="" width="350" />
+        <img src="/comics/204/204-tma-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +154,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/202" rel="prev">
+        <a href="/comics/203" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/27">
+        <a class="random-post" href="/comics/35">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -179,9 +182,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/203">https://comicss.art/comics/203</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/203/hippopotenuse.png">https://comicss.art/comics/203/hippopotenuse.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/203/hippopotenuse.html" rel="alternate">https://comicss.art/comics/203/hippopotenuse.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/204">https://comicss.art/comics/204</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/204/tma.png">https://comicss.art/comics/204/tma.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/204/tma.html" rel="alternate">https://comicss.art/comics/204/tma.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -220,7 +223,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-08-19"></script>
+    <script src="/js/data.js?last-updated=2025-08-24"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
