--- a/comics/205/initials.html
+++ b/comics/205/initials.html
@@ -13,13 +13,13 @@
     <meta property="og:title" content="comiCSS" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/comics/___/thumb.png" />
+    <meta property="og:image" content="https://comicss.art/comics/205/thumb.png" />
     <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://comicss.art/">
     <meta name="twitter:title" content="comiCSS">
     <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/comics/___/thumb.png">
+    <meta name="twitter:image" content="https://comicss.art/comics/205/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
@@ -66,11 +66,11 @@ css-panel:nth-child(4) {
     <css-person character="jill" left="20"></css-person>
   </css-panel>
   <css-panel>
-    <css-speech left="15" top="10" line="left-35 long">Hi, I’m <code><b>s</b>hape-<b>i</b>nside: <b>a</b>uto</code>,<br/> but people call me <b>Sia</b> for short.</css-speech>
+    <css-speech left="15" top="10" line="left-35 long">Hi, I'm <code><b>s</b>hape-<b>i</b>nside: <b>a</b>uto</code>,<br/> but people call me <b>Sia</b> for short.</css-speech>
     <css-person skin="dark" chest="thin" mouth="small" hair="curly long" arms="left-15 right--15" left="20"></css-person>
   </css-panel>
   <css-panel>
-    <css-speech left="20" top="5" line="left-30 long">Howdy! ⁠My name is<br><code><b>t</b>ext-<b>o</b>rientation: <b>m</b>ixed</code>,<br>and people call me <b>Tom</b>.</css-speech>
+    <css-speech left="20" top="5" line="left-30 long">Howdy! My name is<br><code><b>t</b>ext-<b>o</b>rientation: <b>m</b>ixed</code>,<br>and people call me <b>Tom</b>.</css-speech>
     <css-person character="john" skin="medium" facial-hair="mustache" mouth="small sided side-right" head="bald" left="20" arms="left-10 right--15 right-fold--20"></css-person>
   </css-panel>
   <css-panel>
