update meta data

--- a/comics/205/index.html
+++ b/comics/205/index.html
@@ -15,11 +15,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art/comics/205" />
     <meta property="og:image" content="https://comicss.art/comics/205/thumb.png" />
-    <meta property="og:description" content="Cartoon with 4 panels in a 2x2 grid titled "CSS Short Names". It shows different people (all seem happy but the last one who looks annoyed) saying: - Hello! My name is text-emphasis: sesame, but my friends call me Tess. - Hi, I'm shape-inside: auto, but people call me Sia for short. - Howdy, my name is text-orientation: mixed, and people call me Tom. - My name is align-self: stretch... and I hate this conversation." />
+    <meta property="og:description" content="Cartoon with 4 panels in a 2x2 grid titled 'CSS Short Names'. It shows different people (all seem happy but the last one who looks annoyed) saying: - Hello! My name is text-emphasis: sesame, but my friends call me Tess. - Hi, I'm shape-inside: auto, but people call me Sia for short. - Howdy, my name is text-orientation: mixed, and people call me Tom. - My name is align-self: stretch... and I hate this conversation." />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://comicss.art/comics/205">
     <meta name="twitter:title" content="comiCSS #205: Nicknames">
-    <meta name="twitter:description" content="Cartoon with 4 panels in a 2x2 grid titled "CSS Short Names". It shows different people (all seem happy but the last one who looks annoyed) saying: - Hello! My name is text-emphasis: sesame, but my friends call me Tess. - Hi, I'm shape-inside: auto, but people call me Sia for short. - Howdy, my name is text-orientation: mixed, and people call me Tom. - My name is align-self: stretch... and I hate this conversation.">
+    <meta name="twitter:description" content="Cartoon with 4 panels in a 2x2 grid titled 'CSS Short Names'. It shows different people (all seem happy but the last one who looks annoyed) saying: - Hello! My name is text-emphasis: sesame, but my friends call me Tess. - Hi, I'm shape-inside: auto, but people call me Sia for short. - Howdy, my name is text-orientation: mixed, and people call me Tom. - My name is align-self: stretch... and I hate this conversation.">
     <meta name="twitter:image" content="https://comicss.art/comics/205/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
