initial new comic

--- a/comics/206/index.html
+++ b/comics/206/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #206: Trust Issues</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #206: Trust Issues" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/206" />
+    <meta property="og:image" content="https://comicss.art/comics/206/thumb.png" />
+    <meta property="og:description" content="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/206">
+    <meta name="twitter:title" content="comiCSS #206: Trust Issues">
+    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!">
+    <meta name="twitter:image" content="https://comicss.art/comics/206/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/206" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/207" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!">
+      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!">
         <img src="/comics/206/206-trust-issues-0.webp" alt="" width="350" />
         <img src="/comics/206/206-trust-issues-1.webp" alt="" width="350" />
         <img src="/comics/206/206-trust-issues-2.webp" alt="" width="350" />
@@ -168,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/207" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -182,8 +181,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/206">https://comicss.art/comics/206</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/206/trust-issues.png">https://comicss.art/comics/206/trust-issues.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/206">https://comicss.art/comics/206</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/206/trust-issues.png">https://comicss.art/comics/206/trust-issues.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/206/trust-issues.html" rel="alternate">https://comicss.art/comics/206/trust-issues.html</a></p>
 
       <hr />
@@ -222,8 +221,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-08-31"></script>
+    <script>let postId = 206;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
