--- a/comics/207/index.html
+++ b/comics/207/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #206: Trust Issues</title>
+    <title>comiCSS #207: Random</title>
 
-    <meta property="og:title" content="comiCSS #206: Trust Issues" />
+    <meta property="og:title" content="comiCSS #207: Random" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/206" />
-    <meta property="og:image" content="https://comicss.art/comics/206/thumb.png" />
-    <meta property="og:description" content="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!" />
+    <meta property="og:url" content="https://comicss.art/comics/207" />
+    <meta property="og:image" content="https://comicss.art/comics/207/thumb.png" />
+    <meta property="og:description" content="Comic title Random with 4 panels in a 2x2 grid. Each panel has two characters talking: Person 1: Great! Because the readers need this comic to be even more confusing! Person 2: I'm fine... wait, what's going on? Person 2: I think the comic creator is playing with the random() function! Person 1: Hi, how are you? Comic footer: comiCSS: a webcomic about CSS. Coded with love in CSS. comicss.art" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/206">
-    <meta name="twitter:title" content="comiCSS #206: Trust Issues">
-    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!">
-    <meta name="twitter:image" content="https://comicss.art/comics/206/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/207">
+    <meta name="twitter:title" content="comiCSS #207: Random">
+    <meta name="twitter:description" content="Comic title Random with 4 panels in a 2x2 grid. Each panel has two characters talking: Person 1: Great! Because the readers need this comic to be even more confusing! Person 2: I'm fine... wait, what's going on? Person 2: I think the comic creator is playing with the random() function! Person 1: Hi, how are you? Comic footer: comiCSS: a webcomic about CSS. Coded with love in CSS. comicss.art">
+    <meta name="twitter:image" content="https://comicss.art/comics/207/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/206" />
+    <link rel="canonical" href="https://comicss.art/comics/207" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Trust Issues</h1>
+      <h1>Random</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/205" rel="prev">
+        <a href="/comics/206" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/39">
+        <a class="random-post" href="/comics/67">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/207" rel="next">
+        <a href="/comics/208" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!">
-        <img src="/comics/206/206-trust-issues-0.webp" alt="" width="350" />
-        <img src="/comics/206/206-trust-issues-1.webp" alt="" width="350" />
-        <img src="/comics/206/206-trust-issues-2.webp" alt="" width="350" />
-        <img src="/comics/206/206-trust-issues-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="Comic title Random with 4 panels in a 2x2 grid. Each panel has two characters talking: Person 1: Great! Because the readers need this comic to be even more confusing! Person 2: I'm fine... wait, what's going on? Person 2: I think the comic creator is playing with the random() function! Person 1: Hi, how are you? Comic footer: comiCSS: a webcomic about CSS. Coded with love in CSS. comicss.art">
+        <img src="/comics/207/207-random-0.webp" alt="" width="350" />
+        <img src="/comics/207/207-random-1.webp" alt="" width="350" />
+        <img src="/comics/207/207-random-2.webp" alt="" width="350" />
+        <img src="/comics/207/207-random-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +153,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/205" rel="prev">
+        <a href="/comics/206" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/121">
+        <a class="random-post" href="/comics/92">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/207" rel="next">
+        <a href="/comics/208" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +181,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/206">https://comicss.art/comics/206</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/206/trust-issues.png">https://comicss.art/comics/206/trust-issues.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/206/trust-issues.html" rel="alternate">https://comicss.art/comics/206/trust-issues.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/207">https://comicss.art/comics/207</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/207/random.png">https://comicss.art/comics/207/random.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/207/random.html" rel="alternate">https://comicss.art/comics/207/random.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +221,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 206;</script>
+    <script>let postId = 207;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
