--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Trust Issues</h1>
+      <h1>Random</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/205" rel="prev">
+        <a href="/comics/206" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/39">
+        <a class="random-post" href="/comics/67">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. The same character says Trust issues? Of course I have trust issues! You see, I've been working with CSS for a while already... (over a dark gray background) ...And, in CSS, this is gray... (over a light gray background) ...but this is darkgray. Then sighs And don't get me started with the sea greens!">
-        <img src="/comics/206/206-trust-issues-0.webp" alt="" width="350" />
-        <img src="/comics/206/206-trust-issues-1.webp" alt="" width="350" />
-        <img src="/comics/206/206-trust-issues-2.webp" alt="" width="350" />
-        <img src="/comics/206/206-trust-issues-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="Comic title Random with 4 panels in a 2x2 grid. Each panel has two characters talking: Person 1: Great! Because the readers need this comic to be even more confusing! Person 2: I'm fine... wait, what's going on? Person 2: I think the comic creator is playing with the random() function! Person 1: Hi, how are you? Comic footer: comiCSS: a webcomic about CSS. Coded with love in CSS. comicss.art">
+        <img src="/comics/207/207-random-0.webp" alt="" width="350" />
+        <img src="/comics/207/207-random-1.webp" alt="" width="350" />
+        <img src="/comics/207/207-random-2.webp" alt="" width="350" />
+        <img src="/comics/207/207-random-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +154,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/205" rel="prev">
+        <a href="/comics/206" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/121">
+        <a class="random-post" href="/comics/92">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +182,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/206">https://comicss.art/comics/206</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/206/trust-issues.png">https://comicss.art/comics/206/trust-issues.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/206/trust-issues.html" rel="alternate">https://comicss.art/comics/206/trust-issues.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/207">https://comicss.art/comics/207</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/207/random.png">https://comicss.art/comics/207/random.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/207/random.html" rel="alternate">https://comicss.art/comics/207/random.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +223,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-08-31"></script>
+    <script src="/js/data.js?last-updated=2025-09-06"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
