new cartoon: balloon

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Hell (v2)</h1>
+      <h1>CSS Balloon</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/207" rel="prev">
+        <a href="/comics/208" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/89">
+        <a class="random-post" href="/comics/62">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,15 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid showing a man in hell talking to the devil. Devil: Sorry, today we are running super late. You will have to punish yourself creating a website. Man (smiling): A website? That's not that terrible! The devil and the man continue looking at each other awkwardly in silence. Man (really scared): It's with Tailwing, isn't it? The devil looks at him with an evil grin on his face.">
-        <img src="/comics/208/208-hell-0.webp" alt="" width="350" />
-        <img src="/comics/208/208-hell-1.webp" alt="" width="350" />
-        <img src="/comics/208/208-hell-2.webp" alt="" width="350" />
-        <img src="/comics/208/208-hell-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="horizontal" role="img" aria-label="comic with 8 panels in a 4x2 grid showing a character that is overwhelmed by bad news at work and on TV. He walks towards a wardrobe where he gets a balloon, inflates it and walks towards a door. The next panel is a colorful sky with the person floating away with the balloon next to the CSS code translate: Infinity Infinity. The last panel shows two people left behind, one says 'Wait... you can do that with CSS?' The other sadly says 'Don't leave us behind!!'">
+        <img src="/comics/209/209-balloon-0.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-1.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-2.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-3.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-4.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-5.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-6.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-7.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +158,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/207" rel="prev">
+        <a href="/comics/208" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/52">
+        <a class="random-post" href="/comics/168">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +186,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/208">https://comicss.art/comics/208</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/208/hell.png">https://comicss.art/comics/208/hell.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/208/hell.html" rel="alternate">https://comicss.art/comics/208/hell.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/209">https://comicss.art/comics/209</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/209/balloon.png">https://comicss.art/comics/209/balloon.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/209/balloon.html" rel="alternate">https://comicss.art/comics/209/balloon.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +227,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-09-08"></script>
+    <script src="/js/data.js?last-updated=2025-09-14"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
