--- a/comics/209/index.html
+++ b/comics/209/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #208: Hell (v2)</title>
+    <title>comiCSS #209: CSS Balloon</title>
 
-    <meta property="og:title" content="comiCSS #208: Hell (v2)" />
+    <meta property="og:title" content="comiCSS #209: CSS Balloon" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/208" />
-    <meta property="og:image" content="https://comicss.art/comics/208/thumb.png" />
-    <meta property="og:description" content="comic with 4 panels in a 2x2 grid showing a man in hell talking to the devil. Devil: Sorry, today we are running super late. You will have to punish yourself creating a website. Man (smiling): A website? That's not that terrible! The devil and the man continue looking at each other awkwardly in silence. Man (really scared): It's with Tailwing, isn't it? The devil looks at him with an evil grin on his face." />
+    <meta property="og:url" content="https://comicss.art/comics/209" />
+    <meta property="og:image" content="https://comicss.art/comics/209/thumb.png" />
+    <meta property="og:description" content="comic with 8 panels in a 4x2 grid showing a character that is overwhelmed by bad news at work and on TV. He walks towards a wardrobe where he gets a balloon, inflates it and walks towards a door. The next panel is a colorful sky with the person floating away with the balloon next to the CSS code translate: Infinity Infinity. The last panel shows two people left behind, one says 'Wait... you can do that with CSS?' The other sadly says 'Don't leave us behind!!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/208">
-    <meta name="twitter:title" content="comiCSS #208: Hell (v2)">
-    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid showing a man in hell talking to the devil. Devil: Sorry, today we are running super late. You will have to punish yourself creating a website. Man (smiling): A website? That's not that terrible! The devil and the man continue looking at each other awkwardly in silence. Man (really scared): It's with Tailwing, isn't it? The devil looks at him with an evil grin on his face.">
-    <meta name="twitter:image" content="https://comicss.art/comics/208/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/209">
+    <meta name="twitter:title" content="comiCSS #209: CSS Balloon">
+    <meta name="twitter:description" content="comic with 8 panels in a 4x2 grid showing a character that is overwhelmed by bad news at work and on TV. He walks towards a wardrobe where he gets a balloon, inflates it and walks towards a door. The next panel is a colorful sky with the person floating away with the balloon next to the CSS code translate: Infinity Infinity. The last panel shows two people left behind, one says 'Wait... you can do that with CSS?' The other sadly says 'Don't leave us behind!!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/209/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/208" />
+    <link rel="canonical" href="https://comicss.art/comics/209" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Hell (v2)</h1>
+      <h1>CSS Balloon</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/207" rel="prev">
+        <a href="/comics/208" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/89">
+        <a class="random-post" href="/comics/62">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/209" rel="next">
+        <a href="/comics/210" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,15 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid showing a man in hell talking to the devil. Devil: Sorry, today we are running super late. You will have to punish yourself creating a website. Man (smiling): A website? That's not that terrible! The devil and the man continue looking at each other awkwardly in silence. Man (really scared): It's with Tailwing, isn't it? The devil looks at him with an evil grin on his face.">
-        <img src="/comics/208/208-hell-0.webp" alt="" width="350" />
-        <img src="/comics/208/208-hell-1.webp" alt="" width="350" />
-        <img src="/comics/208/208-hell-2.webp" alt="" width="350" />
-        <img src="/comics/208/208-hell-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="horizontal" aria-label="comic with 8 panels in a 4x2 grid showing a character that is overwhelmed by bad news at work and on TV. He walks towards a wardrobe where he gets a balloon, inflates it and walks towards a door. The next panel is a colorful sky with the person floating away with the balloon next to the CSS code translate: Infinity Infinity. The last panel shows two people left behind, one says 'Wait... you can do that with CSS?' The other sadly says 'Don't leave us behind!!'">
+        <img src="/comics/209/209-balloon-0.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-1.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-2.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-3.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-4.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-5.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-6.webp" alt="" width="350" />
+        <img src="/comics/209/209-balloon-7.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +157,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/207" rel="prev">
+        <a href="/comics/208" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/52">
+        <a class="random-post" href="/comics/168">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +171,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/209" rel="next">
+        <a href="/comics/210" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +185,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/208">https://comicss.art/comics/208</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/208/hell.png">https://comicss.art/comics/208/hell.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/208/hell.html" rel="alternate">https://comicss.art/comics/208/hell.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/209">https://comicss.art/comics/209</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/209/balloon.png">https://comicss.art/comics/209/balloon.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/209/balloon.html" rel="alternate">https://comicss.art/comics/209/balloon.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +225,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 208;</script>
+    <script>let postId = 209;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
