--- a/comics/211/index.html
+++ b/comics/211/index.html
@@ -15,11 +15,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art/comics/211" />
     <meta property="og:image" content="https://comicss.art/comics/211/thumb.png" />
-    <meta property="og:description" content="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'Wahat the **** did just happen?'" />
+    <meta property="og:description" content="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'What the **** did just happen?'" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://comicss.art/comics/211">
     <meta name="twitter:title" content="comiCSS #211: Two CSS properties walk into a bar...">
-    <meta name="twitter:description" content="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'Wahat the **** did just happen?'">
+    <meta name="twitter:description" content="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'What the **** did just happen?'">
     <meta name="twitter:image" content="https://comicss.art/comics/211/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'Wahat the **** did just happen?'">
+      <div id="comic-strip" role="img" class="" aria-label="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'What the **** did just happen?'">
         <img src="/comics/211/211-two-properties-walk-into-a-bar-0.webp" alt="" width="350" />
         <img src="/comics/211/211-two-properties-walk-into-a-bar-1.webp" alt="" width="350" />
         <img src="/comics/211/211-two-properties-walk-into-a-bar-2.webp" alt="" width="350" />
