--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'Wahat the **** did just happen?'">
+      <div id="comic-strip" class="" role="img" aria-label="Comic with 4 panels in a 2x2 grid titled 'Two CSS properties walk into a bar...' Two characters tagged 'display' and 'flex' are talking while talking: 'I don't know... are you sure it will be Ok?', 'Of course! Whatever you heard, it's just an urban legend. Nothing to worry about.' and get inside a bar. Meanwhile in a different part of town, in a different bar, a big noise happen, the barman looks over the counter to a customer on the floor (off panel) 'Sir, are you ok?' and the person replies 'What the **** did just happen?'">
         <img src="/comics/211/211-two-properties-walk-into-a-bar-0.webp" alt="" width="350" />
         <img src="/comics/211/211-two-properties-walk-into-a-bar-1.webp" alt="" width="350" />
         <img src="/comics/211/211-two-properties-walk-into-a-bar-2.webp" alt="" width="350" />
