--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>No Trespassing</h1>
+      <h1>Latibulate</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/216" rel="prev">
+        <a href="/comics/217" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/136">
+        <a class="random-post" href="/comics/184">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic with 4 panels in a 2x2 grid titled The Sign. Two people are talking: - I haven't seen any solicitors lately. It's really nice. - Yes. None since I put the sign at the gate. - What sign? asks the first person surprised. The last panel is a drawing of a fence with a sign: No Trespassing. Violators will be forced to code using TailwindCSS">
-        <img src="/comics/217/217-no-trespassing-0.webp" alt="" width="350" />
-        <img src="/comics/217/217-no-trespassing-1.webp" alt="" width="350" />
-        <img src="/comics/217/217-no-trespassing-2.webp" alt="" width="350" />
-        <img src="/comics/217/217-no-trespassing-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }">
+        <img src="/comics/218/218-latibulate-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/216" rel="prev">
+        <a href="/comics/217" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/126">
+        <a class="random-post" href="/comics/112">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/217">https://comicss.art/comics/217</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/217/no-trespassing.png">https://comicss.art/comics/217/no-trespassing.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/217/no-trespassing.html" rel="alternate">https://comicss.art/comics/217/no-trespassing.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/218">https://comicss.art/comics/218</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/218/latibulate.png">https://comicss.art/comics/218/latibulate.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/218/latibulate.html" rel="alternate">https://comicss.art/comics/218/latibulate.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-10-20"></script>
+    <script src="/js/data.js?last-updated=2025-10-22"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
