--- a/comics/218/index.html
+++ b/comics/218/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #217: No Trespassing</title>
+    <title>comiCSS #218: Latibulate</title>
 
-    <meta property="og:title" content="comiCSS #217: No Trespassing" />
+    <meta property="og:title" content="comiCSS #218: Latibulate" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/217" />
-    <meta property="og:image" content="https://comicss.art/comics/217/thumb.png" />
-    <meta property="og:description" content="Comic with 4 panels in a 2x2 grid titled The Sign. Two people are talking: - I haven't seen any solicitors lately. It's really nice. - Yes. None since I put the sign at the gate. - What sign? asks the first person surprised. The last panel is a drawing of a fence with a sign: No Trespassing. Violators will be forced to code using TailwindCSS" />
+    <meta property="og:url" content="https://comicss.art/comics/218" />
+    <meta property="og:image" content="https://comicss.art/comics/218/thumb.png" />
+    <meta property="og:description" content="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/217">
-    <meta name="twitter:title" content="comiCSS #217: No Trespassing">
-    <meta name="twitter:description" content="Comic with 4 panels in a 2x2 grid titled The Sign. Two people are talking: - I haven't seen any solicitors lately. It's really nice. - Yes. None since I put the sign at the gate. - What sign? asks the first person surprised. The last panel is a drawing of a fence with a sign: No Trespassing. Violators will be forced to code using TailwindCSS">
-    <meta name="twitter:image" content="https://comicss.art/comics/217/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/218">
+    <meta name="twitter:title" content="comiCSS #218: Latibulate">
+    <meta name="twitter:description" content="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }">
+    <meta name="twitter:image" content="https://comicss.art/comics/218/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/217" />
+    <link rel="canonical" href="https://comicss.art/comics/218" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>No Trespassing</h1>
+      <h1>Latibulate</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/216" rel="prev">
+        <a href="/comics/217" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/136">
+        <a class="random-post" href="/comics/184">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/218" rel="next">
+        <a href="/comics/219" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="Comic with 4 panels in a 2x2 grid titled The Sign. Two people are talking: - I haven't seen any solicitors lately. It's really nice. - Yes. None since I put the sign at the gate. - What sign? asks the first person surprised. The last panel is a drawing of a fence with a sign: No Trespassing. Violators will be forced to code using TailwindCSS">
-        <img src="/comics/217/217-no-trespassing-0.webp" alt="" width="350" />
-        <img src="/comics/217/217-no-trespassing-1.webp" alt="" width="350" />
-        <img src="/comics/217/217-no-trespassing-2.webp" alt="" width="350" />
-        <img src="/comics/217/217-no-trespassing-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }">
+        <img src="/comics/218/218-latibulate-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/216" rel="prev">
+        <a href="/comics/217" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/126">
+        <a class="random-post" href="/comics/112">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/218" rel="next">
+        <a href="/comics/219" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/217">https://comicss.art/comics/217</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/217/no-trespassing.png">https://comicss.art/comics/217/no-trespassing.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/217/no-trespassing.html" rel="alternate">https://comicss.art/comics/217/no-trespassing.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/218">https://comicss.art/comics/218</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/218/latibulate.png">https://comicss.art/comics/218/latibulate.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/218/latibulate.html" rel="alternate">https://comicss.art/comics/218/latibulate.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 217;</script>
+    <script>let postId = 218;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
